--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -17,7 +17,7 @@ jobs:
         uses: actions/checkout@v4
       - name: Test
         run:
-          docker-compose up -d
+          docker compose up -d
           docker-compose run --rm app sh -c "python manage.py test"
       - name: Lint
         run: docker-compose run --rm app sh -c "flake8"
