--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -15,7 +15,7 @@ jobs:
           password: ${{ secrets.DOCKERHUB_TOKEN }}
       - name: Checkout
         uses: actions/checkout@v4
-      - name: Test
+      - name: TestS
         run:
           docker-compose up -d
           docker-compose run --rm app sh -c "python manage.py test"
