--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -18,7 +18,9 @@ jobs:
       - name: TestS
         run:
           docker-compose up -d
-          docker-compose run --rm app sh -c "python manage.py test"
+          docker-compose run app sh -c "python manage.py test"
+          docker-compose down
+
       - name: Lint
-        run: docker-compose run --rm app sh -c "flake8"
+        run: docker-compose run app sh -c "flake8"
 
