--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -17,9 +17,9 @@ jobs:
         uses: actions/checkout@v4
       - name: TestS
         run:
-          docker-compose up -d
-          docker-compose run app sh -c "python manage.py test"
-          docker-compose down
+          docker compose up -d
+          docker compose run app sh -c "python manage.py test"
+          docker compose down
 
       - name: Lint
         run: docker-compose run app sh -c "flake8"
