--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -17,8 +17,8 @@ jobs:
         uses: actions/checkout@v4
       - name: TestS
         run: |
-          docker compose up -d
-          docker compose run app sh -c "python manage.py test"
+          docker compose up -d |
+          docker compose run app sh -c "python manage.py test" |
           docker compose down
 
       - name: Lint
